<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".buydetail">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="189dp"
        android:layout_height="53dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/product_details"
        android:textColor="#7CB342"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageView
        android:id="@+id/imageButton6"
        android:layout_width="191dp"
        android:layout_height="168dp"
        android:contentDescription="@string/todo0"
        android:src="@drawable/rice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="188dp"
        android:layout_height="62dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/product_name_brown_rice"
        android:textSize="18sp"
        android:textColor="#070B07"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="179dp"
        android:layout_height="47dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/rate_25_kg"
        android:textSize="18sp"
        android:textColor="#070B07"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="175dp"
        android:layout_height="57dp"
        android:layout_marginTop="18dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/producer_info"
        android:textColor="#7CB342"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.358" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="219dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/producer_name_raghavan"
        android:textColor="#070B07"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="222dp"
        android:layout_height="75dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/location_22kottakal_sinod_aruvikulam_tvm_08"
        android:textColor="#070B07"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button4"
        android:layout_width="130dp"
        android:layout_height="57dp"
        android:layout_marginTop="34dp"
        android:background="#7CB342"
        android:text="@string/buy2"
        android:textColor="#F8F8F8"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />

    <EditText
        android:id="@+id/textView28"
        android:layout_width="179dp"
        android:layout_height="43dp"
        android:autofillHints=""
        android:hint="@string/quantity_in_kg"
        android:inputType=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.725" />


</androidx.constraintlayout.widget.ConstraintLayout>